Fixin' overflow of textbox in mobile view

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 html, body{
     margin: 0;
     padding: 0;
+    height: 100%;
+    overflow: hidden;
     background-color: #171717;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -31,8 +33,9 @@ header {
     align-items: center;
     column-gap: 10px;
     position: fixed;
-    top: 0%;
-    left: 0%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 header > div {
     display: flex;
@@ -246,6 +249,7 @@ header > div > p { font-size: 20px; color: #ccc; }
 {
     #btnDelete { display: none;}
     #delete-chat { display: block;}
+    .container { height: calc(100vh - 60px); margin-top: 60px; }
     .bot-chat-box > img { width: 30px; height: 30px; }
     .section-1::-webkit-scrollbar { width: 3px;}
     .user-message-box, .bot-message-box { max-width: 300px; width: max-content;}
